# orthanc_storage_link_plugin

./: .gitignore  CMakeLists.txt  README.md
StorageLink_ChangeCallback/: Plugin.cpp
StorageLink_StorageArea/: Plugin.cpp  StorageArea.cpp  StorageArea.h
